# Clock

./: CMakeLists.txt  qml.qrc
qml/: Alarms.qml  Main.qml  StopWatch.qml  Timers.qml  WorldClock.qml
src/: main.cpp
